# tgs

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TREMPLATE.md
.github/workflows/: cross-compiling-env.sh  dispatch-test.yml  pr.yml  release-pkg.sh  release.yml
crates/tgs_colors/: Cargo.toml
crates/tgs_colors/src/: lib.rs
crates/tgs_command/: Cargo.toml
crates/tgs_command/src/: exit.rs  lib.rs
crates/tgs_core/: Cargo.toml
crates/tgs_core/src/: alias.rs  hooks.rs  keybinding.rs  lang.rs  lib.rs  output_writer.rs  shell.rs  state.rs
crates/tgs_core/src/builtin/: history.rs  mod.rs
crates/tgs_handler/: Cargo.toml
crates/tgs_handler/src/: lib.rs  path.rs
crates/tgs_lexer/: Cargo.toml
crates/tgs_lexer/src/: ast.rs  eval.rs  grammar.lalrpop  lang.rs  lexer.rs  lib.rs  parser.rs
crates/tgs_loader/: Cargo.toml
crates/tgs_loader/src/: lib.rs
crates/tgs_login/: Cargo.toml
crates/tgs_login/src/: auth.rs  lib.rs
crates/tgs_prompt/: Cargo.toml
crates/tgs_prompt/src/: lib.rs  loading_indicator.rs
crates/tgs_readline/: Cargo.toml
crates/tgs_readline/src/: autosuggestion.rs  buffer_history.rs  highlight.rs  lib.rs  line.rs  menu.rs  painter.rs  prompt.rs  vi.rs
crates/tgs_readline/src/completion/: completer.rs
crates/tgs_services/: Cargo.toml
crates/tgs_setup/: Cargo.toml
crates/tgs_setup/src/: lib.rs
crates/tgs_shell/: Cargo.toml
crates/tgs_shell/src/: lib.rs  plugin.rs  shell.rs
crates/tgs_t5_finetunned/: Cargo.toml  inference_model.py
crates/tgs_t5_finetunned/model/: generation_config.json  rust_model.ot  tokenizer_config.json
crates/tgs_t5_finetunned/src/: from_py.rs  lib.rs  main.rs
crates/tgs_t5_finetunned/utils/: convert_model.py
crates/tgs_utils/: Cargo.toml
crates/tgs_utils/src/: io.rs  job.rs  process.rs  util.rs
crates/tgs_vi/: Cargo.toml
crates/tgs_welcome/: Cargo.toml
crates/tgs_welcome/src/: lib.rs
src/: main.rs
tgs/: .gitattributes  Cargo.toml
tgs/crates/process/src/: lib.rs
tgs/crates/shell/: Cargo.toml
tgs/crates/shell/src/: lib.rs
tgs/crates/tgs_bert/: Cargo.toml
tgs/crates/tgs_bert/data/: nl2bash-data.json
tgs/crates/tgs_bert/src/: lib.rs
tgs/crates/tgs_bridge/: Cargo.toml  pyproject.toml
tgs/crates/tgs_bridge/src/: example.py  lib.rs
tgs/crates/tgs_bridge/src/modules/: example.py
tgs/crates/tgs_handler/src/: path.rs
tgs/crates/tgs_shell/: Cargo.toml
tgs/crates/tgs_shell/src/: lib.rs
tgs/crates/tgs_t5_finetunned/: Cargo.toml
tgs/crates/tgs_t5_finetunned/model/: config.json  model.npz  pytorch_model.ot  rust_model.ot
tgs/crates/tgs_t5_finetunned/src/: lib.rs  main.rs
tgs/crates/tgs_welcome/: Cargo.toml
tgs/src/: main.rs  utils.rs
tgs/src/path/: mod.rs
tgs/src/process/: mod.rs
tgs/src/tests/: utils.rs
tgs/src/utils/: test.rs
