workspace = { members = [
    "crates/tgs_colors",
    "crates/tgs_command",
    "crates/tgs_core",
    "crates/tgs_lexer",
    "crates/tgs_loader",
    "crates/tgs_prompt",
    "crates/tgs_readline",
    "crates/tgs_services",
    "crates/tgs_setup",
    "crates/tgs_utils",
    "crates/tgs_vi",
] }
[package]
name = "tgs"
version = "0.1.0"
authors = ["Lucas Oliveira <jucas.oliveira@gmail.com>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tgs_shell = { path = 'crates/tgs_shell' }
tgs_handler = { path = 'crates/tgs_handler' }
tgs_t5_finetunned = { path = 'crates/tgs_t5_finetunned' }
tgs_welcome = { path = 'crates/tgs_welcome' }
tgs_login = { path = 'crates/tgs_login' }
tgs_setup = { path = 'crates/tgs_setup' }
tgs_prompt = { path = 'crates/tgs_prompt' }
tgs_readline = { path = 'crates/tgs_readline' }
dirs = "5"
colored = "2.0.0"
rand = "0.8.5"
chrono = "0.4.19"
regex = "1.5.5"
term = "0.7.0"
duct = "0.13.6"
tokio = { version = "1", features = ["full"] }
