[package]
name = "tgs"
version = "0.1.0"
authors = ["Lucas Oliveira <jucas.oliveira@gmail.com>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tgs_shell = { path = 'crates/tgs_shell' }
tgs_handler = { path = 'crates/tgs_handler' }
tgs_bridge = { path = 'crates/tgs_bridge' }
colored = "2.0.0"
rand = "0.8.5"
chrono = "0.4.19"
clap = "4.3.21"
regex = "1.5.5"
term = "0.7.0"
duct = "0.13.6"
