[package]
name = "tgs_lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tgs_utils = { path = '../tgs_utils' }
tgs_core = { path = '../tgs_core' }
tgs_t5_finetunned = { path = '../tgs_t5_finetunned' }
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
regex = "1"
nix = { version = "0.27.1", default-features = false, features = [
    "fs",
    "term",
    "process",
    "signal",
] }

pino_deref = "0.1"

lazy_static = "1.4"
thiserror = "1"
anyhow = "1"


[build-dependencies]
lalrpop = { version = "0.19.8", features = ["lexer"] }
