[package]
name = "tgs_login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
webbrowser = "0.8.12"
url = "2.2"
