[package]
name = "tgs_prompt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tgs_colors = { path = '../tgs_colors' }
dirs = "5.0.1"                              # Check for the latest version
colored = "2.0.0"
tgs_services = { path = '../tgs_services' }
tgs_readline = { path = '../tgs_readline' }
crossterm = "0.27.0"
regex = "1.10.2"
