[package]
authors = ["The TGShel Project"]
description = "Shell functionality"
repository = "https://github.com/warpy-ai/tgs/tgs/crates/tgs_shell"
edition = "2021"
license = "MIT"
name = "tgs_shell"
version = "0.0.1"

[[test]]
name = "test"
path = "tests/test.rs"

[dependencies]
tgs_login = { path = '../tgs_login' }
tgs_setup = { path = '../tgs_setup' }
tgs_prompt = { path = '../tgs_prompt' }
chrono = "0.4.31"
