[package]
authors = ["The TGShel Project"]
description = "Shell functionality"
repository = "https://github.com/warpy-ai/tgs/tgs/crates/tgs_shell"
edition = "2021"
license = "MIT"
name = "tgs_shell"
version = "0.0.1"

[[test]]
name = "test"
path = "tests/test.rs"

[dependencies]
tgs_login = { path = '../tgs_login' }
tgs_setup = { path = '../tgs_setup' }
tgs_prompt = { path = '../tgs_prompt' }
tgs_handler = { path = '../tgs_handler' }
chrono = "0.4.31"

derive_builder = "0.12"
tgs_core = { path = "../tgs_core" }
tgs_utils = { path = "../tgs_utils" }
tgs_lexer = { path = "../tgs_lexer" }
tgs_readline = { path = "../tgs_readline" }
tgs_services = { path = "../tgs_services" }
tgs_vi = { path = "../tgs_vi" }
crossterm = "0.27.0"
log = "0.4"
anyhow = "1"
