[package]
name = "tgs_t5_finetunned"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tgs_t5_finetunned"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "convert-tensor"
path = "src/convert-tensor.rs"
doc = false

[[bin]]
name = "main-executable" # You can choose a different name
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0"
ndarray = "0.15.6"
tokenizers = "0.15.0"
pyo3 = "0.20.2"
dialoguer = "0.11.0"
tgs_loader = { path = "../tgs_loader" }
tgs_colors = { path = "../tgs_colors" }
