[package]
name = "tgs_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", default-features = false, features = [
    "fs",
    "term",
    "process",
    "signal",
] }

lazy_static = "1.4"
thiserror = "1"
anyhow = "1"
log = "0.4"
