[package]
name = "tgs_vi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
regex = "1"

thiserror = "1"
anyhow = "1"

[build-dependencies]
lalrpop = { version = "0.20.0", features = ["lexer"] }
