[package]
name = "tgs_bert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.21.0"
protobuf = "3.2.0"        # Replace with a compatible version
rust_tokenizers = "8.1.0" # Replace with a compatible version
