[package]
name = "tgs_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
numpy = "0.19"
pyo3 = { version = "0.19.2", default-features = false }

[dev-dependencies]
pyo3 = { version = "0.19.2", default-features = false, features = [
    "auto-initialize",
    "macros",
] }


[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
